bug fixing into docker push line in ci file second time

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,5 +32,5 @@ jobs:
           context: .
           push: true
           tags: |
-            otniel217/cicd-pipeline:latest
+            otniel217/cicd-pipeline
             otniel217/cicd-pipeline:${{ github.sha }}
