--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,5 +32,4 @@ jobs:
           context: .
           push: true
           tags: |
-            otniel217/cicd-pipeline
-            otniel217/cicd-pipeline:${{ github.sha }}
+            otniel217/cicd-pipeline:latest
