--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
-name: CI Docker Build and Push
+name: CI Docker Build and Push Locally
 
 on:
   push:
     branches:
-      - main # Triggers on push to the main branch
+      - main
 
 jobs:
   build-and-push:
@@ -14,22 +14,23 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: Set up Docker
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      # Step 3: Log in to Docker Hub
+      # Step 2: Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Step 4: Build and push Docker image
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          tags: |
-            otniel217/cicd-pipeline:latest
+      # Step 3: Build the Docker image locally
+      - name: Build Docker image
+        run: |
+          docker build -t otniel217/cicd-pipeline:latest .
+
+      # Step 4: List Docker images (Optional for Debugging)
+      - name: List Docker images
+        run: docker images
+
+      # Step 5: Push the Docker image to Docker Hub
+      - name: Push Docker image
+        run: |
+          docker push otniel217/cicd-pipeline:latest
