--- a/.github/workflows/cd-deploy.yml
+++ b/.github/workflows/cd-deploy.yml
@@ -1,7 +1,10 @@
 name: CD Deploy with Self-Hosted Runner
 
 on:
-  workflow_dispatch: # Triggered manually from the GitHub Actions UI
+  workflow_run: # Triggered manually from the GitHub Actions UI
+    workflows: ["CI Docker Build and Push Locally"]
+    types: 
+      -completed
 
 jobs:
   deploy:
